@@ -3,7 +3,7 @@
     <parent>
         <groupId>io.debezium</groupId>
         <artifactId>debezium-parent</artifactId>
-        <version>2.1.0-SNAPSHOT</version>
+        <version>2.6.0-SNAPSHOT</version>
         <relativePath>../debezium-parent/pom.xml</relativePath>
     </parent>
     <modelVersion>4.0.0</modelVersion>
@@ -54,6 +54,21 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.debezium</groupId>
+            <artifactId>debezium-testing-testcontainers</artifactId>
+            <scope>test</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.junit.platform</groupId>
+                    <artifactId>junit-platform-launcher</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.junit.jupiter</groupId>
+                    <artifactId>junit-jupiter</artifactId>
+                </exclusion>
+            </exclusions>
+        </dependency>
+        <dependency>
             <groupId>ch.qos.logback</groupId>
             <artifactId>logback-classic</artifactId>
             <scope>test</scope>
@@ -79,31 +94,39 @@
             <scope>test</scope>
         </dependency>
         <dependency>
+            <groupId>io.apicurio</groupId>
+            <artifactId>apicurio-registry-utils-converter</artifactId>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
             <groupId>org.awaitility</groupId>
             <artifactId>awaitility</artifactId>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
     <properties>
-        <!-- By default we need to run these 5 containers, although the two init containers exit quickly -->
-        <docker.image>mongo1,mongo-init</docker.image>
-
-        <!-- The command line args passed to each mongod service -->
-        <mongo.data.replicaset.name>rs0</mongo.data.replicaset.name>
-        <mongo.cfg.replicaset.name>cfg</mongo.cfg.replicaset.name>
-        <mongo.data.runOptions>--replSet ${mongo.data.replicaset.name} --oplogSize=2 --enableMajorityReadConcern</mongo.data.runOptions>
-        <mongo.cfg.runOptions>--configsvr --replSet ${mongo.cfg.replicaset.name} --oplogSize=2 --enableMajorityReadConcern</mongo.cfg.runOptions>
-        <mongo.router.runOptions>mongos --configdb ${mongo.cfg.replicaset.name}/config:27019</mongo.router.runOptions>
         <!-- 
         Set this property to 'true' in a profile to skip the integration tests and not even run the Docker containers.
         -->
         <docker.skip>false</docker.skip>
         <docker.exposeContainerInfo>docker.container</docker.exposeContainerInfo>
-        <docker.dbs>mongo:${version.mongo.server},debezium/mongo-initiator:${version.mongo.server}</docker.dbs>
-        <docker.filter>${docker.dbs}</docker.filter>
         <!-- Apicurion container properties -->
         <apicurio.port>8080</apicurio.port>
         <apicurio.init.timeout>60000</apicurio.init.timeout> <!-- 60 seconds -->
+        <!-- Mongo configuration -->
+        <!-- See MongoDbPlatform enum for possible options -->
+        <mongodb.platform>mongodb_docker</mongodb.platform>
+        <!-- Mongo test containers -->
+        <!-- port range used to allocate ports -->
+        <mongodb.docker.desktop.ports>27017:27117</mongodb.docker.desktop.ports>
+        <mongodb.replica.size>1</mongodb.replica.size>
+        <mongodb.shard.size>2</mongodb.shard.size>
+        <mongodb.shard.replica.size>${mongodb.replica.size}</mongodb.shard.replica.size>
     </properties>
     <build>
         <plugins>
@@ -116,59 +139,6 @@
                     <verbose>true</verbose>
                     <!--autoPull>always</autoPull-->
                     <images>
-                        <!-- A container for the data server replica set -->
-                        <image>
-                            <name>mongo:${version.mongo.server}</name>
-                            <alias>mongo1</alias>
-                            <run>
-                                <namingStrategy>alias</namingStrategy>
-                                <cmd>${mongo.data.runOptions}</cmd>
-                                <ports>
-                                    <!-- We won't use it thru this port, but we don't want to take 27017 on docker host -->
-                                    <port>27017:27017</port>
-                                </ports>
-                                <log>
-                                    <prefix>mongo1</prefix>
-                                    <enabled>true</enabled>
-                                    <color>yellow</color>
-                                </log>
-                                <wait>
-                                    <log>.*[Ww]aiting for connections.*27017</log> <!-- internal port, multiline matching -->
-                                    <time>30000</time> <!-- 30 seconds max -->
-                                </wait>
-                            </run>
-                            <external>
-                                <type>properties</type>
-                                <mode>override</mode>
-                            </external>
-                        </image>
-                        <!-- A container that initiates the data replica set and adds it as shard to router -->
-                        <image>
-                            <name>debezium/mongo-initiator:${version.mongo.server}</name>
-                            <run>
-                                <namingStrategy>none</namingStrategy>
-                                <env>
-                                    <VERBOSE>true</VERBOSE>
-                                    <REPLICASET>${mongo.data.replicaset.name}</REPLICASET>
-                                </env>
-                                <links>
-                                    <link>mongo1:mongo1</link>
-                                </links>
-                                <log>
-                                    <prefix>mongo-init</prefix>
-                                    <enabled>true</enabled>
-                                    <color>green</color>
-                                </log>
-                                <wait>
-                                    <exit>0</exit>
-                                    <time>30000</time> <!-- 30 seconds max -->
-                                </wait>
-                            </run>
-                            <external>
-                                <type>properties</type>
-                                <mode>override</mode>
-                            </external>
-                        </image>
                         <image>
                             <name>apicurio/apicurio-registry-mem:${version.apicurio}</name>
                             <run>
@@ -238,11 +208,17 @@
                     <enableAssertions>true</enableAssertions>
                     <systemPropertyVariables>
                         <!-- Make these available to the tests via system properties -->
-                        <connector.mongodb.hosts>${mongo.data.replicaset.name}/${docker.host.address}:27017</connector.mongodb.hosts>
-                        <connector.mongodb.members.auto.discover>false</connector.mongodb.members.auto.discover>
-                        <connector.mongodb.name>mongo1</connector.mongodb.name>
+                        <version.mongo.server>${version.mongo.server}</version.mongo.server>
+                        <mongodb.docker.desktop.ports>${mongodb.docker.desktop.ports}</mongodb.docker.desktop.ports>
+                        <mongodb.replica.size>${mongodb.replica.size}</mongodb.replica.size>
+                        <mongodb.shard.size>${mongodb.shard.size}</mongodb.shard.size>
+                        <mongodb.shard.replica.size>${mongodb.shard.replica.size}</mongodb.shard.replica.size>
+                        <mongodb.platform>${mongodb.platform}</mongodb.platform>
+                        <mongodb.connection.string>${mongodb.connection.string}</mongodb.connection.string>
                         <skipLongRunningTests>${skipLongRunningTests}</skipLongRunningTests>
                     </systemPropertyVariables>
+                    <runOrder>${runOrder}</runOrder>
+                    <argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
                 </configuration>
             </plugin>
             <plugin>
@@ -256,6 +232,9 @@
                             <goal>generate-api-spec</goal>
                         </goals>
                         <phase>prepare-package</phase>
+                        <configuration>
+                            <outputDirectory>${project.build.outputDirectory}/META-INF/resources/</outputDirectory>
+                        </configuration>
                     </execution>
                 </executions>
             </plugin>
@@ -286,6 +265,15 @@
     Define several useful profiles
     -->
     <profiles>
+        <profile>
+            <id>document-db</id>
+            <activation>
+                <activeByDefault>false</activeByDefault>
+            </activation>
+            <properties>
+                <mongodb.platform>document_db</mongodb.platform>
+            </properties>
+        </profile>
         <profile>
             <id>assembly</id>
             <activation>
@@ -321,6 +309,16 @@
                                 </configuration>
                             </execution>
                         </executions>
+                    </plugin>
+                    <plugin>
+                        <groupId>org.apache.maven.plugins</groupId>
+                        <artifactId>maven-failsafe-plugin</artifactId>
+                        <version>${version.failsafe.plugin}</version>
+                        <configuration>
+                            <systemPropertyVariables>
+                                <isAssemblyProfileActive>true</isAssemblyProfileActive>
+                            </systemPropertyVariables>
+                        </configuration>
                     </plugin>
                 </plugins>
             </build>
@@ -376,7 +374,7 @@
                 </plugins>
             </build>
             <properties>
-                <docker.filter>${docker.dbs},apicurio/apicurio-registry-mem:${version.apicurio}</docker.filter>
+                <docker.filter>apicurio/apicurio-registry-mem:${version.apicurio}</docker.filter>
             </properties>
         </profile>
     </profiles>
