@@ -4,7 +4,7 @@
   <parent>
     <groupId>io.debezium</groupId>
     <artifactId>debezium-testing</artifactId>
-    <version>2.1.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
     <relativePath>../pom.xml</relativePath>
   </parent>
 
@@ -18,21 +18,25 @@
     <version.commons.compress>1.21</version.commons.compress>
     <version.strimzi>0.28.0</version.strimzi>
     <version.strimzi.kafka>${version.kafka}</version.strimzi.kafka>
-    <version.junit5>5.7.2</version.junit5>
     <version.assertj>3.11.1</version.assertj>
     <version.apicurio>2.2.0.Final</version.apicurio>
     <version.apicurio.model>2.2.0.Final</version.apicurio.model>
     <version.fixture5>0.1.0</version.fixture5>
 
+    <product.build>false</product.build>
+    <prepare.strimzi>true</prepare.strimzi>
+
     <!--KC image configuration-->
     <image.build.registry>quay.io</image.build.registry>
-    <image.kc>${image.build.registry}/debezium/testing-openshift-connect:kafka-${version.kafka}-${project.version}</image.kc>
     <image.as>${image.build.registry}/debezium/test-artifact-server:${project.version}</image.as>
 
     <!--Docker configuration-->
-    <docker.image.mysql>quay.io/debezium/example-mysql:latest</docker.image.mysql>
+    <docker.image.mysql>quay.io/debezium/example-mysql-master:latest</docker.image.mysql>
+    <docker.image.mysql.replica>quay.io/debezium/example-mysql-replica:latest</docker.image.mysql.replica>
     <docker.image.postgresql>quay.io/debezium/example-postgres:latest</docker.image.postgresql>
+    <docker.image.postgresql.replica>quay.io/debezium/postgres:15</docker.image.postgresql.replica>
     <docker.image.mongo>quay.io/debezium/example-mongodb:latest</docker.image.mongo>
+    <docker.image.mongo.sharded>quay.io/debezium/example-mongodb:latest</docker.image.mongo.sharded>
     <docker.image.sqlserver>mcr.microsoft.com/mssql/server:2019-latest</docker.image.sqlserver>
     <docker.image.db2>quay.io/rh_integration/dbz-db2-cdc:latest</docker.image.db2>
     <docker.image.oracle>quay.io/rh_integration/dbz-oracle:19.3.0</docker.image.oracle>
@@ -49,22 +53,25 @@
     <ocp.project.oracle>${ocp.project.debezium}-oracle</ocp.project.oracle>
 
     <ocp.image.mysql>${docker.image.mysql}</ocp.image.mysql>
-    <ocp.image.postgresql>quay.io/debezium/example-postgres-ocp:latest</ocp.image.postgresql>
+    <ocp.image.mysql.replica>${docker.image.mysql.replica}</ocp.image.mysql.replica>
+    <ocp.image.postgresql>${docker.image.postgresql}</ocp.image.postgresql>
+    <ocp.image.postgresql.replica>${docker.image.postgresql.replica}</ocp.image.postgresql.replica>
     <ocp.image.mongo>${docker.image.mongo}</ocp.image.mongo>
     <ocp.image.sqlserver>${docker.image.sqlserver}</ocp.image.sqlserver>
     <ocp.image.db2>${docker.image.db2}</ocp.image.db2>
     <ocp.image.oracle>${docker.image.oracle}</ocp.image.oracle>
 
     <!--Strimzi configuration-->
-    <strimzi.operator.name>strimzi-cluster-operator</strimzi.operator.name>
+    <strimzi.operator.channel>stable</strimzi.operator.channel>
     <strimzi.operator.connectors>true</strimzi.operator.connectors>
-    <strimzi.crd.version>v1beta2</strimzi.crd.version>
     <strimzi.kc.build>true</strimzi.kc.build>
     <strimzi.kc.log.level.dbz>DEBUG</strimzi.kc.log.level.dbz>
 
     <!--Apicurio configuration-->
     <apicurio.crd.version>v1</apicurio.crd.version>
     <apicurio.log.level>INFO</apicurio.log.level>
+    <apicurio.operator.channel>2.x</apicurio.operator.channel>
+    <apicurio.tls.enabled>false</apicurio.tls.enabled>
 
     <!--MySQL configuration-->
     <database.mysql.port>3306</database.mysql.port>
@@ -86,9 +93,9 @@
     <database.sqlserver.port>5432</database.sqlserver.port>
     <database.sqlserver.username>sa</database.sqlserver.username>
     <database.sqlserver.password>Debezium1$</database.sqlserver.password>
-    <database.sqlserver.dbz.username>${database.db2.username}</database.sqlserver.dbz.username>
-    <database.sqlserver.dbz.password>${database.db2.password}</database.sqlserver.dbz.password>
-    <database.sqlserver.dbnames>TestDB</database.sqlserver.dbnames>
+    <database.sqlserver.dbz.username>${database.sqlserver.username}</database.sqlserver.dbz.username>
+    <database.sqlserver.dbz.password>${database.sqlserver.password}</database.sqlserver.dbz.password>
+    <database.sqlserver.dbnames>testDB</database.sqlserver.dbnames>
 
     <!--MongoDB configuration-->
     <database.mongo.port>27017</database.mongo.port>
@@ -98,6 +105,8 @@
     <database.mongo.dbz.password>dbz</database.mongo.dbz.password>
     <database.mongo.dbz.dbname>inventory</database.mongo.dbz.dbname>
     <database.mongo.dbz.login.dbname>admin</database.mongo.dbz.login.dbname>
+    <database.mongo.docker.desktop.ports>27017:27117</database.mongo.docker.desktop.ports>
+    <database.mongo.docker.replica.size>1</database.mongo.docker.replica.size>
 
     <!--DB2 configuration -->
     <database.db2.port>50000</database.db2.port>
@@ -199,6 +208,11 @@
   </dependencyManagement>
 
   <dependencies>
+    <dependency>
+      <groupId>io.debezium</groupId>
+      <artifactId>debezium-testing-testcontainers</artifactId>
+      <version>${project.version}</version>
+    </dependency>
     <dependency>
       <groupId>io.fabric8</groupId>
       <artifactId>openshift-client</artifactId>
@@ -303,7 +317,12 @@
     <dependency>
       <groupId>org.junit.jupiter</groupId>
       <artifactId>junit-jupiter</artifactId>
-      <version>${version.junit5}</version>
+      <scope>test</scope>
+    </dependency>
+
+    <dependency>
+      <groupId>org.junit.platform</groupId>
+      <artifactId>junit-platform-launcher</artifactId>
       <scope>test</scope>
     </dependency>
 
@@ -332,8 +351,8 @@
     </dependency>
 
     <dependency>
-      <groupId>mysql</groupId>
-      <artifactId>mysql-connector-java</artifactId>
+      <groupId>com.mysql</groupId>
+      <artifactId>mysql-connector-j</artifactId>
     </dependency>
 
     <dependency>
@@ -400,6 +419,7 @@
 
       <properties>
         <as.apicurio.url>${as.url}/service-registry-${as.apicurio.version}-distro-connect-converter.zip</as.apicurio.url>
+        <product.build>true</product.build>
       </properties>
     </profile>
     <profile>
@@ -443,15 +463,22 @@
               <skipTests>${skipITs}</skipTests>
               <enableAssertions>true</enableAssertions>
               <trimStackTrace>false</trimStackTrace>
+              <runOrder>${runOrder}</runOrder>
+              <!-- Idea not picking up and emitting a warning not sure why, it works in other modules just fine -->
+              <argLine>--add-opens java.base/java.net=ALL-UNNAMED</argLine>
               <systemPropertyVariables>
                 <test.wait.scale>1</test.wait.scale>
+                <test.product.build>${product.build}</test.product.build>
+                <test.prepare.strimzi>${prepare.strimzi}</test.prepare.strimzi>
 
                 <test.artifact.server.url>${as.url}</test.artifact.server.url>
                 <!--Docker Configuration-->
                 <test.docker.image.kc>${docker.image.kc}</test.docker.image.kc>
                 <test.docker.image.mysql>${docker.image.mysql}</test.docker.image.mysql>
+                <test.docker.image.mysql.replica>${docker.image.mysql.replica}</test.docker.image.mysql.replica>
                 <test.docker.image.postgresql>${docker.image.postgresql}</test.docker.image.postgresql>
                 <test.docker.image.mongo>${docker.image.mongo}</test.docker.image.mongo>
+                <test.docker.image.mongo.sharded>${docker.image.mongo.sharded}</test.docker.image.mongo.sharded>
                 <test.docker.image.sqlserver>${docker.image.sqlserver}</test.docker.image.sqlserver>
                 <test.docker.image.db2>${docker.image.db2}</test.docker.image.db2>
                 <test.docker.image.oracle>${docker.image.oracle}</test.docker.image.oracle>
@@ -472,10 +499,9 @@
                 <test.ocp.project.oracle>${ocp.project.oracle}</test.ocp.project.oracle>
 
                 <!--Strimzi Configuration-->
-                <test.strimzi.operator.name>${strimzi.operator.name}</test.strimzi.operator.name>
+                <test.strimzi.operator.channel>${strimzi.operator.channel}</test.strimzi.operator.channel>
                 <test.strimzi.version.kafka>${version.strimzi.kafka}</test.strimzi.version.kafka>
                 <test.strimzi.operator.connectors>${strimzi.operator.connectors}</test.strimzi.operator.connectors>
-                <test.strimzi.crd.version>${strimzi.crd.version}</test.strimzi.crd.version>
                 <test.strimzi.kc.build>${strimzi.kc.build}</test.strimzi.kc.build>
                 <test.strimzi.kc.image>${image.kc}</test.strimzi.kc.image>
                 <test.strimzi.kc.log.level.dbz>${strimzi.kc.log.level.dbz}</test.strimzi.kc.log.level.dbz>
@@ -483,6 +509,8 @@
                 <!--Apicurio configuration-->
                 <test.apicurio.crd.version>${apicurio.crd.version}</test.apicurio.crd.version>
                 <test.apicurio.log.level>${apicurio.log.level}</test.apicurio.log.level>
+                <test.apicurio.operator.channel>${apicurio.operator.channel}</test.apicurio.operator.channel>
+                <test.apicurio.tls.enabled>${apicurio.tls.enabled}</test.apicurio.tls.enabled>
 
                 <!--MySQL configuration-->
                 <test.database.mysql.host>${database.mysql.host}</test.database.mysql.host>
@@ -519,6 +547,8 @@
                 <test.database.mongo.dbz.password>${database.mongo.dbz.password}</test.database.mongo.dbz.password>
                 <test.database.mongo.dbz.dbname>${database.mongo.dbz.dbname}</test.database.mongo.dbz.dbname>
                 <test.database.mongo.dbz.login.dbname>${database.mongo.dbz.login.dbname}</test.database.mongo.dbz.login.dbname>
+                <test.database.mongo.docker.desktop.ports>${database.mongo.docker.desktop.ports}</test.database.mongo.docker.desktop.ports>
+                <test.database.mongo.docker.replica.size>${database.mongo.docker.replica.size}</test.database.mongo.docker.replica.size>
 
                 <!--DB2 configuration-->
                 <test.database.db2.host>${database.db2.host}</test.database.db2.host>
@@ -538,14 +568,6 @@
                 <test.database.oracle.dbz.password>${database.oracle.dbz.password}</test.database.oracle.dbz.password>
                 <test.database.oracle.dbname>${database.oracle.dbname}</test.database.oracle.dbname>
                 <test.database.oracle.pdbname>${database.oracle.pdbname}</test.database.oracle.pdbname>
-
-                <!-- Artifact server-->
-                <test.as.url>${as.url}</test.as.url>
-                <test.as.debezium.version>${as.debezium.version}</test.as.debezium.version>
-                <test.as.apicurio.version>${as.apicurio.version}</test.as.apicurio.version>
-                <test.as.apicurio.url>${as.apicurio.url}</test.as.apicurio.url>
-                <test.as.db2.driver.version>${version.db2.driver}</test.as.db2.driver.version>
-                <test.as.oracle.driver.version>${version.oracle.driver}</test.as.oracle.driver.version>
               </systemPropertyVariables>
             </configuration>
 
